<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="?android:attr/actionBarSize">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--<TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="Email"/>

    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:maxLines="1"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Direct Wildlife Observation "
        android:textSize="30sp"
        android:paddingBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Species Type"
        android:textColor="#372c24"
        />

    <Spinner
        android:id="@+id/spinSpeciesType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_no_of_male_adults"
        android:textColor="#372c24"
        />

    <EditText
        android:id="@+id/edTxtNoMaleAdults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_no_of_female_adults"
        android:textColor="#372c24"
        />

    <EditText
        android:id="@+id/edTxtNoFemaleAdults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_no_of_young"
        android:textColor="#372c24"
        />

    <EditText
        android:id="@+id/edTxtNoYoung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_no_of_undetermined"
        android:textColor="#372c24"
        />

    <EditText
        android:id="@+id/edTxtNoUndetermined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Action Taken"
        android:textColor="#372c24"
        />

    <Spinner
        android:id="@+id/spinActionTaken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Observed Through Hunting"
        android:textColor="#372c24"
        />

    <Spinner
        android:id="@+id/spinObservedThroughHunting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_observation"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:onClick="displaySaveObsWarningDialog"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

</LinearLayout>

</ScrollView>